# tenrankai

./: .dockerignore  .gitignore  API.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.no-avif  Makefile  README.md  config-cascading-example.toml  config-no-auth.toml  config.example.toml  config.toml  config.toml.example  docker-compose.example.yml  dynserver.service  install.sh  tenrankai.service  test-package.sh  users.toml.example
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml  docker-publish.yml  release.yml  security.yml
debian/: README.Debian  changelog  control  copyright  logrotate  postinst  postrm  prerm  rules
docs/: LOGIN_MODULE.md  cookie_secret_migration.md  test_cache_busting.md
internal_docs/: CLAUDE.md  clippy_fixes.md  login_email_support.md  login_styles_extraction.md  test_fixes_summary.md  test_login_changes.md
photos/vacation/: _A630303-HDR.avif  _A639941.avif
posts/blog/: example-post.md
scripts/: docker-release.sh
src/: api.rs  composite.rs  copyright.rs  favicon.rs  gallery.rs  lib.rs  main.rs  robots.rs  startup_checks.rs  static_files.rs  templating.rs  templating_multi_dir_tests.rs  templating_tests.rs  webp_encoder.rs
src/commands/: avif_debug.rs  mod.rs
src/email/: config.rs  error.rs  mod.rs  types.rs
src/email/providers/: mod.rs  null.rs  ses.rs
src/gallery/: cache.rs  core.rs  error.rs  handlers.rs  image_processing.rs  metadata.rs  mod.rs  types.rs
src/gallery/image_processing/: icc.rs  mod.rs  resize.rs  serve.rs  types.rs  watermark.rs
src/gallery/image_processing/formats/: avif.rs  avif_container.rs  jpeg.rs  mod.rs  png.rs  webp.rs
src/gallery/image_processing/tests/: avif_tests.rs  cache_tests.rs  composite_tests.rs  icc_profile_tests.rs  jpeg_tests.rs  mod.rs  png_tests.rs  real_avif_tests.rs  watermark_tests.rs
src/login/: auth.rs  error.rs  handlers.rs  mod.rs  tests.rs  types.rs
src/login/webauthn/: error.rs  handlers.rs  mod.rs  types.rs
src/posts/: core.rs  error.rs  handlers.rs  mod.rs  tests.rs  types.rs
static/: contact.css  home.css  image-detail.css  login.css  login.js  post-detail.css  posts-index.css  style.css
templates/: 404.html.liquid  _footer.html.liquid  _gallery_preview.html.liquid  _header.html.liquid  about.html.liquid  contact.html.liquid  gallery.html.liquid  image_detail.html.liquid  index.html.liquid  login.html.liquid  login_success.html.liquid  passkey_enrollment.html.liquid
templates/modules/: gallery.html.liquid  image_detail.html.liquid  passkey_enrollment.html.liquid
templates/pages/: 404.html.liquid  about.html.liquid  contact.html.liquid  image_detail.html.liquid  index.html.liquid  passkeys.html.liquid  post_detail.html.liquid  posts_index.html.liquid
templates/partials/: _footer.html.liquid  _gallery_preview.html.liquid  _header.html.liquid  _user_menu.html.liquid
tests/: asset_url_integration.rs  avif_gain_map.rs  cascading_static_directories.rs  gallery_integration_tests.rs  null_email_provider.rs  posts_integration.rs  template_example.rs  template_integration.rs
