[package]
name = "dynserver"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
hmac = "0.12"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
rexif = "0.7"
image = "0.25"
resvg = "0.43"
usvg = "0.43"
ico = "0.3"
liquid = "0.26"
mime_guess = "2.0"
pulldown-cmark = "0.12"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.8"
