[package]
name = "tenrankai"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
hmac = "0.12"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
rexif = "0.7"
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
resvg = "0.45"
usvg = "0.45"
ico = "0.4"
webp = { version = "0.3", features = ["img"] }
libwebp-sys = "0.13"
liquid = "0.26"
mime_guess = "2.0"
pulldown-cmark = "0.13"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.9"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.8"
axum-test = "18.0"
